--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Reference: https://github.com/github/gitignore/blob/master/Android.gitignore
+
 # Built application files
 *.apk
 *.ap_
@@ -16,6 +18,7 @@ out/
 # Gradle files
 .gradle/
 build/
+/build
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -34,6 +37,8 @@ captures/
 
 # Intellij
 *.iml
+*/.idea
+.idea/*
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
@@ -41,7 +46,8 @@ captures/
 .idea/libraries
 
 # Keystore files
-*.jks
+# Uncomment the following line if you do not want to check your keystore files in.
+#*.jks
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
@@ -53,3 +59,7 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+# Mac Specific
+.DS_Store
+*/.DS_Store
