--- a/sparkles/src/main/AndroidManifest.xml
+++ b/sparkles/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.postmates.android.sparkles" />
+<manifest package="com.postmates.android.sparkles" />
