--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlinVersion = '1.2.21'
+    ext.kotlinVersion = '1.2.50'
     repositories {
         google()
         maven { url "https://maven.google.com" }
@@ -8,7 +8,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     }
 }
@@ -24,12 +24,12 @@ allprojects {
 }
 
 ext {
-    compileSdk = 27
-    targetSdk = 27
+    compileSdk = 28
+    targetSdk = 28
     minSdk = 21
 
-    buildTools = '27.0.3'
-    supportLibsVersion = '27.0.2'
+    constraintLayoutVersion = '2.0.0-alpha1'
+    supportLibsVersion = '27.1.1'
     ktxVersion = '0.1'
 }
 
