--- a/sample-java/build.gradle
+++ b/sample-java/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.compileSdk
-    buildToolsVersion rootProject.buildTools
 
     defaultConfig {
         applicationId appId
@@ -32,7 +31,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$supportLibsVersion"
     implementation "com.android.support:design:$supportLibsVersion"
     implementation "com.android.support:support-annotations:$supportLibsVersion"
-    implementation "com.android.support.constraint:constraint-layout:1.1.0-beta5"
+    implementation "com.android.support.constraint:constraint-layout:2.0.0-alpha1"
 }
 
 configurations.all {
