--- a/sample-kotlin/build.gradle
+++ b/sample-kotlin/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion rootProject.compileSdk
-    buildToolsVersion rootProject.buildTools
 
     defaultConfig {
         applicationId appId
@@ -35,7 +34,7 @@ dependencies {
     implementation "com.android.support:appcompat-v7:$supportLibsVersion"
     implementation "com.android.support:design:$supportLibsVersion"
     implementation "com.android.support:support-annotations:$supportLibsVersion"
-    implementation "com.android.support.constraint:constraint-layout:1.1.0-beta5"
+    implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
 }
 
 configurations.all {
