--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
+ext {
+    compileSdk = 28
+    targetSdk = 28
+    minSdk = 21
+
+    constraintLayoutVersion = '2.0.0-alpha2'
+    androidXVersion = '1.0.0'
+}
+
 buildscript {
-    ext.kotlinVersion = '1.2.71'
+    ext.kotlinVersion = '1.3.0'
     repositories {
         google()
         maven { url "https://maven.google.com" }
@@ -21,16 +30,6 @@ allprojects {
         jcenter()
         mavenCentral()
     }
-}
-
-ext {
-    compileSdk = 28
-    targetSdk = 28
-    minSdk = 21
-
-    constraintLayoutVersion = '2.0.0-alpha1'
-    supportLibsVersion = '27.1.1'
-    ktxVersion = '0.1'
 }
 
 task clean(type: Delete) {
