--- a/sample-kotlin/build.gradle
+++ b/sample-kotlin/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion rootProject.compileSdk
 
     defaultConfig {
-        applicationId appId
+        applicationId "${appId}.kotlin"
         minSdkVersion rootProject.minSdk
         targetSdkVersion rootProject.targetSdk
         versionCode "${appVersionCode}" as int
@@ -16,12 +16,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
     }
 }
 
@@ -30,19 +25,8 @@ dependencies {
     implementation project(':sparkles')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    implementation "androidx.core:core-ktx:$ktxVersion"
-    implementation "com.android.support:appcompat-v7:$supportLibsVersion"
-    implementation "com.android.support:design:$supportLibsVersion"
-    implementation "com.android.support:support-annotations:$supportLibsVersion"
-    implementation "com.android.support.constraint:constraint-layout:$constraintLayoutVersion"
-}
-
-configurations.all {
-    resolutionStrategy {
-        //Make sure that our version is given priority in case of conflicts with libs
-        force "com.android.support:appcompat-v7:$supportLibsVersion"
-        force "com.android.support:design:$supportLibsVersion"
-        force "com.android.support:support-annotations:$supportLibsVersion"
-        force "com.android.support:support-v4:$supportLibsVersion"
-    }
+    implementation "androidx.appcompat:appcompat:$androidXVersion"
+    implementation "com.google.android.material:material:$androidXVersion"
+    implementation "androidx.annotation:annotation:$androidXVersion"
+    implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
 }
