--- a/sparkles/build.gradle
+++ b/sparkles/build.gradle
@@ -19,16 +19,11 @@ android {
         }
     }
 
-    sourceSets {
-        main.java.srcDirs += 'src/main/kotlin'
-    }
-
     flavorDimensions "default"
     resourcePrefix 'pm_sparkles_'
 }
 
 dependencies {
-    implementation "com.android.support:support-annotations:${supportLibsVersion}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    implementation "androidx.core:core-ktx:$ktxVersion"
+    implementation "androidx.annotation:annotation:$androidXVersion"
 }
